--- a/Dashboard/Overview.html
+++ b/Dashboard/Overview.html
@@ -39,7 +39,7 @@
           
           <li class="nav-item pe-3">
             <a class="nav-link nav-profile d-flex align-items-center pe-0" href="#">
-              <img src="/assets/img/profile.png" alt="Profile" class="rounded-circle" />
+              <img src="../assets/img/profile.png" alt="Profile" class="rounded-circle" />
             </a><!-- End Profile Iamge Icon -->
           </li><!-- End Profile Nav -->
         </ul>
@@ -49,7 +49,7 @@
     <!-- Sidebar -->
     <aside id="sidebar" class="sidebar">
       <ul class="sidebar-nav" id="sidebar-nav">
-        <img class="logo-aside" src="/assets/img/logo.png" alt="">
+        <img class="logo-aside" src="../assets/img/logo.png" alt="">
         
         <li class="nav-item ">
           <a class="nav-link  active" href="index.html">
@@ -128,7 +128,7 @@
                   <div class="card-body">
                     <div class="d-flex align-items-center">
                       <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                        <img src="/assets/img/notepad.png" alt="" class="note">
+                        <img src="../assets/img/notepad.png" alt="" class="note">
                       </div>
                       <div class="ps-3">
                         <h6>Total Bookings</h6>
@@ -152,7 +152,7 @@
                   <div class="card-body">
                     <div class="d-flex align-items-center">
                       <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                        <img src="/assets/img/taxi.png" alt="" class="note">
+                        <img src="../assets/img/taxi.png" alt="" class="note">
                       </div>
                       <div class="ps-0">
                         <h6>TOTAL FLEETS</h6>
